--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.3.0",
-    "@gridsome/plugin-google-analytics": "^0.1.0",
     "@gridsome/plugin-sitemap": "^0.2.2",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.3.4",
+    "date-fns": "^2.5.1",
     "gridsome": "^0.7.8",
     "gridsome-plugin-remark-shiki": "^0.3.0",
     "gridsome-plugin-rss": "^1.2.0",
@@ -20,7 +20,6 @@
     "vue-parallaxy": "^1.1.1"
   },
   "devDependencies": {
-    "moment": "^2.24.0",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
     "tailwindcss": "^1.1.2",
