--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "app-interactive",
+  "name": "app-interactive-website",
   "private": true,
   "scripts": {
     "build": "gridsome build",
     "develop": "gridsome develop",
+    "dev": "gridsome develop",
     "explore": "gridsome explore",
     "newpost": "node scripts/newPost.js"
   },
@@ -12,7 +13,7 @@
     "@gridsome/plugin-sitemap": "^0.2.2",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.3.4",
-    "date-fns": "^2.5.1",
+    "date-fns": "^2.6.0",
     "gridsome": "^0.7.8",
     "gridsome-plugin-remark-shiki": "^0.3.0",
     "gridsome-plugin-rss": "^1.2.0",
@@ -22,7 +23,7 @@
   "devDependencies": {
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.1.2",
-    "tailwindcss": "^1.1.2",
+    "tailwindcss": "^1.1.3",
     "tailwindcss-transitions": "^2.1.0"
   }
 }
